=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.11 - August 30, 2010

=over

=item * 

Added C<DBIgnoreVersion> configuration directive to allow for times when
you're upgrading multiple Krang machines at the same time while others
are running. [Michael Peters]

=item *

Pager page numbers and count are now formatted numbers [Michael Peters]

=item *

Status page now uses the C<Charset> directive like the rest of Krang. [Michael Peters]

=item *

Improved performance of ISE notification by running the code under mod_perl
and not CGI. [Michael Peters]

=item * 

Added C<--profile-mode> option to turn on profiling with L<Devel::NYTProf>
from F<bin/krang_apachectl>. [Michael Peters]

=item *

Allow CGI mode to be activated with C<--cgi-mode> option to
F<bin/krang_apachectl>. [Michael Peters]

=item *

Improved navigation rendering performance. [Michael Peters]

=back

=head2 3.10 - June 29, 2010

=over

=item *

Searching for a story now normalizes the url so it can be compared
without problems. [Michael Peters]

=item *

Added storage of C<krang_pager_curr_page_num> and
C<krang_pager_show_big_view> to session cache in In
L<Krang::HTMLPager>. The page number is forced to C<1> when switching
between Retired or Live templates, media, and stories. [Brad Oaks]

=item *

Searching for media on the advanced tab will now return media of all
types when no media_type_id is selected. [Brad Oaks]

=item *

Added C<--skip-media> and C<--skip-stories> options to
F<bin/krang_publish>. [Michael Peters]

=item *

Fixed bug that prevented new categories from being created with the same
URL as an existing story in some circumstances. [Michael Peters]

=item * 

Some autocomplete values were coming back as all lower-case. Case is
now preserved. [Michael Peters]

=item *

Krang scheduler can now be disabled per-instance with the DisableScheduler
directive set to 1. [Brad Oaks]

=item *
